[TASK] Include self reflection template

--- a/configuration/thesis_config.tex
+++ b/configuration/thesis_config.tex
@@ -46,6 +46,7 @@
 \usepackage{natbib}
 \usepackage{titlesec}
 \usepackage{fancyhdr}
+\usepackage{adjustbox}
 
 \titleformat{\chapter}[display]
 {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\Huge}
