--- a/main.tex
+++ b/main.tex
@@ -40,7 +40,10 @@
 \input{partials/statementofauthenticity}
 
 \tableofcontents
-
+\clearpage
+\listoffigures
+\clearpage
+\listoftables
 \clearpage
 
 % Define arabic numbering for the pages that belong to the main content
@@ -57,6 +60,8 @@
 \include{chapters/chapter_5}
 \include{chapters/chapter_6}
 \include{chapters/chapter_7}
+
+\include{partials/self_reflection}
 
 % Set bibliography style to Harvard
 \bibliographystyle{agsm}
