[TASK] Add appendix

--- a/configuration/thesis_config.tex
+++ b/configuration/thesis_config.tex
@@ -47,6 +47,7 @@
 \usepackage{titlesec}
 \usepackage{fancyhdr}
 \usepackage{adjustbox}
+\usepackage[toc,page]{appendix}
 
 \titleformat{\chapter}[display]
 {\normalfont\huge\bfseries}{\chaptertitlename\ \thechapter}{20pt}{\Huge}
