--- a/main.tex
+++ b/main.tex
@@ -68,4 +68,10 @@
 
 % Add the bibliography at the end
 \bibliography{references}
+
+% Add appendix
+\begin{appendices}
+	\include{partials/appendix}
+\end{appendices}
+
 \end{document}
