--- a/partials/appendix.tex
+++ b/partials/appendix.tex
@@ -1,7 +1,7 @@
-\section{Title of appendix A}
+\chapter{Title of appendix A}
 
 bla bla
 
-\section{Title of appendix B}
+\chapter{Title of appendix B}
 
 bla bla
