--- a/main.tex
+++ b/main.tex
@@ -1,28 +1,15 @@
+%% for a german thesis use english,ngerman, the last is default.
+%% for dutch use \def\Languages{english,ducth}
+\def\Languages{ngerman,english,dutch}
 \include{configuration/thesis_config}
-
+\selectlanguage{dutch}
 % provide data for title page
 \title{\textbf{Your Thesis Title Here} \\ Bachelor Thesis}
 \author{Your Name}
 \def\place{Earth}
 \date{\place, \today}
 
-% provide data for information page
-\def\documentname{Bachelor Thesis}
-\def\studentname{Your Name}
-\def\snumber{1234567}
-\def\course{Informatics - Business Informatics/Software Engineering}
-\def\period{Month Year - Month Year}
-\def\companyname{Company Name}
-\def\companyaddress{Default Street 123}
-\def\companypostcodecity{1234 AB, Amsterdam}
-\def\companycountry{The Netherlands}
-\def\companycoach{Coach Name}
-\def\companycoachmail{coach.email@example.com}
-\def\universitytutor{Tutor Name}
-\def\universitytutormail{tutor.email@fontys.nl}
-\def\examinator{Examinator Name}
-\def\externalexpert{TBD}
-\def\hasnda{No}
+% remember to provide data for information page in infopage.tex
 
 \begin{document}
 	
