more dry, less duplication
Read infopage up front, use providecommand to provide warnings,
use more conditional includes,
improved possibility to fast build one chapter with IncludeOnly file, which is read when available

--- a/configuration/macros.tex
+++ b/configuration/macros.tex
@@ -10,7 +10,7 @@
 % \end{infoblock}
 \newenvironment{infoblock}{
 \begin{table}[h!]
-\begin{tabular}{@{}p{0.25\textwidth}l}
+\begin{tabular}{@{}p{0.25\textwidth}>{\bfseries}l}
 }{
 \end{tabular}
 \end{table}
