--- a/partials/statementofauthenticity.tex
+++ b/partials/statementofauthenticity.tex
@@ -16,11 +16,11 @@ I further certify that I did not commit plagiarism, did neither take over nor pa
 \end{infoblock}
 
 Signature:  \\
-\IfFileExists{authicenty_signature.png}{%
+\IfFileExists{authenticity_signature.png}{%
   \hspace{2cm}%
-  \includegraphics[width=.4\linewidth]{authicenty_signature.png}%
+  \includegraphics[width=.4\linewidth]{authenticity_signature.png}%
 }{\fbox{\begin{minipage}{.6\linewidth}\sloppypar
-      If you add a file called \texttt{authicenty\_signature.png} to root
+      If you add a file called \texttt{authenticity\_signature.png} to root
       folder of your build, that will be included as signature here, instead of this text block.
     \end{minipage}
   }}
