using xelatexd to avoid latex installatiohn and use docker instead. see https://github.com/sebivenlo/xelatexd

--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 %% for English use \def\Languages{english},
 %% or \def\Languages{english,british} if you prefer british as English style
 \def\Languages{english,ngerman,dutch}
-\include{configuration/thesis_config}
+\input{configuration/thesis_config}
 %\includeonly{chapters/chapter_1}
 % provide data for title page
 \IfFileExists{linenumberingOn}{\linenumbers}{}
