abbrnat makes links in references clickable

--- a/main.tex
+++ b/main.tex
@@ -48,7 +48,7 @@
 \include{partials/self_reflection}
 
 % Set bibliography style to Harvard
-\bibliographystyle{agsm}
+\bibliographystyle{abbrvnat}
 
 % Add the bibliography at the end
 \bibliography{references}
