--- a/configuration/thesis_config.tex
+++ b/configuration/thesis_config.tex
@@ -23,6 +23,7 @@
 \usepackage{fancybox}
 \usepackage[pdftex]{graphicx}
 \usepackage{fancyhdr}
+\usepackage[dvipsnames]{xcolor}
 \usepackage{%
   array,
   booktabs,
@@ -39,11 +40,19 @@
   amsmath,
   float,
   chngpage,
-  colortbl,times,
+  colortbl,times
 }
 \usepackage[toc,acronym]{glossaries}
 \usepackage[left,pagewise,modulo]{lineno}
 \usepackage{hyperref}
+\hypersetup{
+  colorlinks=true,
+  colorlinks=true,
+  linkcolor=blue,
+  filecolor=magenta,
+  citecolor=PineGreen,
+   urlcolor=RoyalPurple,
+}
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{.5\baselineskip}
 
