--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 %% for dutch use \def\Languages{english,dutch}
 %% for English use \def\Languages{english},
 %% or \def\Languages{english,british} if you prefer british as English style
-\def\Languages{english,ngerman,dutch}
+\def\Languages{ngerman,dutch,english}
 \input{configuration/thesis_config}
 %\includeonly{chapters/chapter_1}
 % provide data for title page
@@ -45,7 +45,7 @@
 \include{chapters/chapter_5}
 \include{chapters/chapter_6}
 \include{chapters/chapter_7}
-
+\include{chapters/tips_and_tricks}
 \include{partials/self_reflection}
 
 %% supress post file when not required
